donde with first trial of event displayer, two prices, and a sample poster. add pop up for images, add to cart functionality to btns, cart summary btn in navi

--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -1,4 +1,11 @@
 .generalCont{
   height: 150vh;
   padding-top: 130px;
+  background-color: whitesmoke;
+}
+
+.aHomeSection{
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
