--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -21,8 +21,14 @@
     padding: 0 21px;
     width: 80%;
 }
+
+.eventListing{
+    font-style: italic;
+    font-size: 0.8em;
+}
 .eventDescrCont p{
     text-align: justify;
+    margin-bottom: 18px;
 }
 
 .priceContainer{
@@ -40,7 +46,7 @@
     transition: var(--general-transition);
 }
 
-.aPriceBox:hover{
+.addToCart:hover{
     box-shadow: var(--generalBoxShadow);
 }
 
@@ -73,6 +79,7 @@
     font-weight: 600;
     border: solid 1px grey;
     align-items: center;
+    cursor: pointer;
 }
 
 .aPriceBox:first-of-type > .addToCart{
