--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -1,13 +1,48 @@
 .generalCont{
-  height: 150vh;
-  padding-top: 130px;
+  min-height: 75vh;
+  padding-top: 100px;
   background-color: whitesmoke;
 }
 
 .aHomeSection{
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: solid 1px grey;
+  overflow-x: hidden;
+
+}
+
+.aSectiontitle{
+  width: 70%;
+  margin: unset;
+  padding: 15px;
+  font-weight: 400;
+}
+
+.homeSplash{
+  height: calc(100vh - 100px);
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  background-color: black;
   justify-content: center;
+  align-items: center;
+  background-image: url("/assets/pictures/texturaFondo.png");
+  background-size: auto;
+  position: relative;
+}
+
+.homeSplashIMG{
+  filter: brightness(0.6);
+}
+
+.homeSplashText{
+  position: absolute;
+  color: white;
+  font-size: 2.7em;
+  font-weight: 300;
 }
 
 .cartDialog{
@@ -55,4 +90,16 @@
   font-weight: 700;
   padding: 3px;
   cursor: pointer;
+}
+@media (max-width: 1080px) {
+  .aSectiontitle{
+    width: 100%;
+  }
+}
+
+@media (max-width: 700px) {
+  .homeSplashText{
+    bottom: 45px;
+    font-size: 2em;
+  }
 }
