--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -80,6 +80,29 @@
     align-items: center;
     cursor: pointer;
 }
+.extsaleBTN{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.extsaleBTN p{
+    margin: unset;
+    font-size: 0.65em;
+    color: white;
+}
+.extsaleBTN:hover > p{
+    color: black;
+}
+
+.buyNowBTN{
+    margin: 12px;
+    padding: 12px 18px;
+    border: solid 3px black;
+    border-radius: 5px;
+    background-color: var(--purple-highlight);
+    font-weight: 700;
+    color: white;
+}
 
 .aPriceBox:first-of-type > .addToCart{
     background-color: var(--purple-highlight);
