--- a/styles/components/navi.module.css
+++ b/styles/components/navi.module.css
@@ -1,6 +1,5 @@
 
 .naviGenCont{
-    padding: 9px;
     font-weight: 500;
     display: flex;
     flex-direction: column;
@@ -10,6 +9,7 @@
     background-color: white;
     top: 0;
     border-bottom: solid;
+    padding: 9px;
 }
 
 .naviRow{
@@ -18,6 +18,9 @@
     align-items: center;
 }
 
+.naviBTNCont{
+    padding-left: 12px;
+}
 .eachMenuBTN{
     padding: 6px 9px;
     margin: 3px;
@@ -87,6 +90,7 @@
     }
     .naviRow{
         justify-content: space-between;
+        width: 99%;
     }
 
     .naviBTNCont{
