--- a/styles/components/navi.module.css
+++ b/styles/components/navi.module.css
@@ -84,6 +84,11 @@
 
 
 @media (max-width: 750px) {
+    .waraxNaviLogo{
+        width: 180px;
+        margin-top: 9px;
+        margin-left: 9px;
+    }
     .naviGenCont{
         padding: unset;
         padding-bottom: 6px;
