--- a/styles/components/navi.module.css
+++ b/styles/components/navi.module.css
@@ -11,11 +11,28 @@
     border-bottom: solid;
     padding: 9px;
 }
+.naviGenCont2{
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: fixed;
+    z-index: 99;
+    background-color: white;
+    top: 0;
+    border-bottom: solid;
+    padding: 3px;
+}
 
 .naviRow{
     width: 100%;
     display: flex;
     align-items: center;
+}
+.naviRow2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .naviBTNCont{
@@ -84,6 +101,9 @@
     display: none;
 }
 
+.waraxNaviLogo{
+    width: 100px;
+}
 
 @media (max-width: 750px) {
     .waraxNaviLogo{
