mini menu is ready with scrolling, need to figure out a way to create cart, maybe in warax navi bar

--- a/styles/pages/monks.module.css
+++ b/styles/pages/monks.module.css
@@ -195,6 +195,9 @@
     margin-top: 44px;
 }
 
+.naviContMOBILE{
+    display: none;
+}
 @media (max-width: 900px){
     .naviCont{
         display: none;
@@ -208,6 +211,25 @@
         justify-content: center;
         align-items: center;
 
+    }
+    .naviContMOBILE{
+        display: unset;
+        position: fixed;
+        top: 50%;
+        right: 0;
+        z-index: 10;
+        padding: 9px;
+        background-color: rgb(147, 148, 148);
+        color: white;
+        border-left: solid 2px yellow;
+    }
+
+    .aMenuItem:hover{
+        color: yellow;
+    }
+    .aMenuItem{
+        margin: 6px 0;
+        padding: 3px;
     }
 }
 
