--- a/styles/components/services.module.css
+++ b/styles/components/services.module.css
@@ -46,8 +46,9 @@
 .aPriceBox{
     padding: 5px 15px;
     width: 200px;
+    height: 150px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     transition: var(--general-transition);
