--- a/styles/components/navi.module.css
+++ b/styles/components/navi.module.css
@@ -37,8 +37,11 @@
 
 .naviBTNCont{
     padding-left: 12px;
-    -color: violet;
     height: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .eachMenuBTN{
     padding: 6px 9px;
@@ -53,7 +56,38 @@
     transition: var(--general-transition);
 }
 
+.highlightTitle{
+    width: 100%;
+    text-align: end;
+    padding: 0 9px;
+    text-transform: uppercase;
+    font-style: italic;
+    font-weight: 800;
+}
+
+.miniSiteLink{
+    font-weight: 400;
+    padding: 0 9px;
+    letter-spacing: 2px;
+    font-size: 1.4em;
+    font-style: italic;
+}
+.miniSiteLinkActive{
+    font-weight: 800;
+    padding: 0 9px;
+    letter-spacing: 2px;
+    font-size: 1.4em;
+    font-style: italic;
+    color: var(--purple-highlight);
+}
+
+.miniSiteLink:hover{
+    font-weight: 700;
+    cursor: pointer;
+}
+
 .eachMenuBTN:hover{
+    cursor: pointer;
     color: var(--purple-highlight);
 }
 
@@ -126,8 +160,10 @@
     }
     .hamburgerCont:hover{
         box-shadow: var(--aHighlightBoxShadow);
+        cursor: pointer;
     }
     .burgerLine:hover{
+        cursor: pointer;
         background-color: var(--purple-highlight);
     }
     .burgerLine{
