--- a/styles/components/eventDisp.module.css
+++ b/styles/components/eventDisp.module.css
@@ -161,6 +161,30 @@
     width: fit-content;
 }
 
+/* ///////////////////// */
+
+.eventPlaceholder{
+    width: 100%;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.eventPlaceholderTitle{
+    font-size: 2em;
+    text-transform: uppercase;
+    font-weight: 550;
+    margin: 33px;
+}
+.eventPlaceholderTitle2{
+    font-size: 1.8em;
+    text-transform: uppercase;
+    width: 60%;
+    text-align: center;
+}
+
 @media (max-width: 1080px) {
     .eventContainer{
         width: 96%;
