--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -112,7 +112,9 @@
   text-align: center;
   font-weight: 500;
   color: white;
+  cursor: pointer;
 }
+
 .homeSplashIMGMobi{display: none;}
 
 .merchOpenerCont{
