--- a/styles/pages/minisites.module.css
+++ b/styles/pages/minisites.module.css
@@ -8,19 +8,40 @@
     align-items: center;
 }
 
+.webVeoIntroBanner{
+    padding: 120px 0;
+}
+
+.seasonIntrotitle{
+    border-top: dotted 2px black;
+    width: 100%;
+    text-align: center;
+    font-weight: 300;
+    font-size: 3em;
+    padding-top: 21px;
+    padding-bottom: 15px;
+}
 
 .episodeListAndPlayer{
     width: 100%;
     display: flex;
-    border-top: dotted 2px black;
-    justify-content: space-around;
-    padding: 12px;
+    justify-content: space-between;
     align-items: center;
+    padding: 15px;
 }
 
 .episodePicker{
     padding: 15px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: var(--generalBoxShadow);
+    width: 360px;
+    height: 315px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 .eachepisodeList{
     padding: 6px;
     cursor: pointer;
@@ -32,9 +53,9 @@
 }
 
 .episodeDescription{
-    width: 100%;
-    background-color: rgb(55, 55, 55);
-    color: white;
+    margin: 15px;
+    border-radius: 5px;
+    background-color: whitesmoke;
     margin-bottom: 21px;
     display: flex;
     flex-direction: column;
@@ -51,17 +72,24 @@
 }
 .episodeDescription h3{
     font-size: 1.5em;
-    padding: 9px 15px;
+    padding: 15px;
     margin: unset;
+    border-bottom: solid 2px var(--purple-highlight);
 }
 
 .episodeDescription p{
     width: 70%;
     padding: 9px 15px;
     text-align: justify;
+    margin-left: 15%;
 }
 
 .webVeoLogo{
     padding: 9px;
     width: 250px;
+}
+
+.webVeoSessIntro{
+    font-size: 1.4em;
+    margin-bottom: 15px;
 }
