--- a/styles/components/navi.module.css
+++ b/styles/components/navi.module.css
@@ -61,7 +61,7 @@
     border-top: solid 1px black;
     margin-top: 6px;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-top: 9px;
 }
 
@@ -205,7 +205,6 @@
 
     .naviCartMob{
         display: unset;
-        width: 100%;
         display: flex;
         justify-content: flex-end;
         padding: 0 15px;
