advances with checkout and db entries. automated email comming soon

--- a/styles/components/stripeStyles.module.css
+++ b/styles/components/stripeStyles.module.css
@@ -55,20 +55,15 @@
     background-color: rgb(160, 101, 214);
 }
 
-.availBTN{
-    border: solid 2px rgb(42, 42, 189); 
-    border-radius: 4px;
-    width: fit-content;
-    padding: 12px 33px;
+.btnCont{
+    width: 120px;
     text-align: center;
-    transition: all ease-in 0.3s;
+    border-radius: 5px;
+    padding: 9px;
+    border: solid 3px var(--purple-highlight);
+    margin-left: calc(50% - 60px);
 }
 
-.availBTN:hover{
-    cursor: pointer;
-    background-color: rgb(42, 42, 189);
-    color: white;
-}
 
 @media (max-width: 600px) {
     .CheckoutForm{
@@ -78,6 +73,5 @@
 
     .CardInputfield{
         width: 85%;
-
     }
 }
