--- a/styles/pages/minisites.module.css
+++ b/styles/pages/minisites.module.css
@@ -53,6 +53,11 @@
 .youTubeIframContMOBILE{
     display: none;
 }
+
+.youTubeIframCont2MOBILE{
+    display: none;
+}
+
 .episodePickerMOBILE{
     display: none;
 }
