--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -41,8 +41,9 @@
 .homeSplashText{
   position: absolute;
   color: white;
-  font-size: 2.7em;
+  font-size: 2.3em;
   font-weight: 300;
+  text-transform: uppercase;
 }
 
 .cartDialog{
